@@ -1,3 +1,11 @@
+2014-09-25  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
+
+	Backport from mainline r215559
+	2014-09-25  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
+
+	PR target/63335
+	* gcc.target/powerpc/pr63335.c: New test.
+
 2014-09-25  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/63341
